# whirlpool-archive-schema

./: Cargo.toml  README.md
src/: lib.rs  serde.rs  types.rs
src/schema/: mod.rs
src/schema/account_delta/: mod.rs
src/schema/event/: mod.rs
src/schema/event/definition/: liquidity_deposited.rs  pool_initialized.rs  position_closed.rs  (+1 more)
src/schema/jsonl/: mod.rs
src/schema/ohlcv/: mod.rs
src/schema/state/: mod.rs
src/schema/token/: mod.rs
src/schema/transaction/: definition.rs  mod.rs
src/tests/: mod.rs  utils.rs
src/tests/account_delta/: mod.rs  test.json
src/tests/event/: mod.rs  test.json
src/tests/ohlcv_daily/: mod.rs  test.json
src/tests/ohlcv_minutely/: mod.rs  test.json
src/tests/state/: mod.rs  test.json
src/tests/token/: mod.rs  test.json
src/tests/transaction/: mod.rs  test.json
whirlpool-archive-serde/: Cargo.toml
whirlpool-archive-serde/src/: lib.rs
whirlpool-event/: Cargo.toml
whirlpool-event/src/definition/: config_extension_updated.rs  fee_tier_initialized.rs  liquidity_deposited.rs  liquidity_patched.rs  liquidity_withdrawn.rs  mod.rs  pool_initialized.rs  position_bundle_deleted.rs  position_closed.rs  position_fees_harvested.rs  position_harvest_updated.rs  position_opened.rs  position_reward_harvested.rs  protocol_fees_collected.rs  reward_emissions_updated.rs  tick_array_initialized.rs  token_badge_deleted.rs  token_badge_initialized.rs  traded.rs
whirlpool-ohlcv/: Cargo.toml
whirlpool-ohlcv/src/: lib.rs
whirlpool-transaction/: Cargo.toml
whirlpool-transaction/src/: definition.rs  lib.rs
(+36 files in other folders)
