[package]
name = "whirlpool-archived-data"
version = "0.2.0"
edition = "2021"

[features]
default = []
without_transaction_decimals = []

[dependencies]
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = { version = "1.0.107", features = ["preserve_order"] }
base64 = "0.21.4"
bigdecimal = "0.4.5"
